[package]
name = "solana-postgres"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[patch."https://github.com/streamingfast/substreams-solana"]
substreams-solana = { git = "https://github.com/streamingfast//substreams-solana.git", tag = "v0.13.0" }

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-database-change = { git = "https://github.com/streamingfast/substreams-sink-database-changes", branch = "develop" }
prost = "0.11"
anyhow = "1"
prost-types = "0.11"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", tag = "v0.1.5" }
spl-token-substream = { git = "https://github.com/sparklex-io/solana-substreams", branch = "kirin" }
raydium-amm-substream = { git = "https://github.com/sparklex-io/solana-substreams", branch = "kirin" }
mpl-token-metadata-substream = { git = "https://github.com/sparklex-io/solana-substreams", branch = "kirin" }
pumpfun-substream = { git = "https://github.com/sparklex-io/solana-substreams", branch = "kirin" }
system-program-substream = { git = "https://github.com/sparklex-io/solana-substreams", branch = "kirin" }
bs58 = "0.5.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
